@@ -1,6 +1,9 @@
 GCG Version 3.1.0
 =================
 
+New features:
+-------------
+- new detector neighborhoodmaster: calculating cons-cons adjacency (if not already done), sorting according size of neighborhood. Searching two consecutive constraints with largest size difference (according neighborhood size) in sorted constraints. All constraints having a larger neighborhood than the second one are assigned to the master.
 
 
 
